bases/downloaders/sabnzb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzb
  annotations:
    k0s.reynn.net/resource-profile: small
    k0s.reynn.net/host: mimikyu
spec:
  selector:
    matchLabels:
      app: sabnzb
  template:
    metadata:
      labels:
        app: sabnzb
    spec:
      containers:
        - name: sabnzb
          image: linuxserver/sabnzb
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8080
              name: tcp-server
          volumeMounts:
            - name: downloads
              mountPath: /media/deadpool/downloads
            - name: config
              mountPath: /config
            - name: temp-nzbs
              mountPath: /media/deadpool/nzbs
      volumes:
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: config
          hostPath:
            path: /media/server/sabnzb/
            type: Directory
        - name: temp-nzbs
          emptyDir: {}
