bases/downloaders/sabnzb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzb
spec:
  type: LoadBalancer
  selector:
    app: sabnzb
  ports:
    - name: tcp
      nodePort: 30880
      port: 8080
