bases/downloaders/sabnzb/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzb
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzb.reynn.net`)
      kind: Rule
      services:
        - name: sabnzb
          port: 6789
      middlewares:
        - name: redirect-web-to-443@internal
  tls:
    secretName: reynn-net-cert
    options:
      name: recommended-tls-opts
      namespace: utils
